- Added /api/company/search/{query} endpoint - Proxied /api & /auth calls made from frontend so endpoints starts with /api or /auth and not with full URL - Added Search route to frontend - Added detail pages for Users & Companies
