# backend/src/server.js
@@ -75,7 +75,7 @@ const meRoutes = require("./routes/meRoutes");
 app.use("/auth/me", meRoutes);
 
 const logoutRoutes = require("./routes/logoutRoutes");
-app.use("/logout", logoutRoutes);
+app.use("/auth/logout", logoutRoutes);
 
 app.get("/", (req, res) => {
   res.send({ message: "CRM API running" });
